test/errors/type/str/replace7.yasl
mt.lookup('', .replace)(.tr, true, 1)
